tests/sksl/errors/UnscopedVariableInDoWhile.glsl
### Compilation failed:

error: 944: variable 'foo' must be created in a scope
1 error
